# flylinks

backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  devsetup.sh  fly.toml  justfile  litefs.yml
extension/: README.md  background.js  manifest.json  popup.js  service_worker.js
