[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
chrono = { version = "0.4.31", features = ["serde", "clock"] }
clap = { version = "4.4.13", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
